<resources>
    <string name="app_name">Three Days</string>
    <!--  FirstPageActivity에서 사용할 텍스트  -->
    <string name="join_login">회원가입 및 로그인</string>
    <string name="start_kakao">카카오로 시작하기</string>
    <string name="start_google">구글로 시작하기</string>
    <string name="auto_login">자동로그인</string>
    <!--  memberInformationActivity에서 사용할 텍스트  -->
    <string name="welcome">환영해요!</string>
    <string name="introduce_yourself">본인을 소개해주세요.</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_hint">*영문/한글/숫자를 입력할 수 있어요. (1~20자 이내)</string>
    <string name="nickname_hint_edt">예시) 윙가디움레비오사</string>
    <string name="keyword_text">나를 대표하는 키워드</string>
    <string name="keyword_hint_edt">예시) 독서광</string>
    <string name="add">+ 추가하기</string>
    <string name="complete">완료</string>
    <!--  mainActivity에서 사용할 텍스트  -->
    <string name="habit_formation">새로운 습관을 형성해주세요:)</string>
    <string name="habit_formation_explanation">습관 형성 버튼은 오른쪽 상단에 있어요.</string>
    <!--  AddHabitFirstActivity에서 사용할 텍스트  -->
    <string name="set_period_text">기간을 설정해 주세요</string>
    <string name="set_period_text_question">일주일 동안 며칠 달성하고 싶으신가요?</string>
    <string name="set_period_text_suggestion">부담 없이 선택해주세요! 1일도 괜찮아요 :></string>
    <string name="day1">1일</string>
    <string name="day2">2일</string>
    <string name="day3">3일</string>
    <string name="day4">4일</string>
    <string name="day5">5일</string>
    <string name="day6">6일</string>
    <string name="day7">7일</string>
    <!--  AddHabitSecondActivity에서 사용할 텍스트  -->
    <string name="set_habit">작심삼일 습관을\n설정해주세요</string>
    <string name="set_habit_text_suggestion">지금 당장 실행할 수 있을 만큼 쉬운 목표를\n작성해주세요</string>
    <string name="set_habit_sub_text">을/를 하겠다</string>
    <!--  AddHabitThirdActivity에서 사용할 텍스트  -->
    <string name="disclosure">공개 여부를 선택해주세요</string>
    <string name="disclosure_hint">피드에 업로드를 하면 인증이 완료됩니다\n피드에 업로드 된 내용을 다른 사람들과 공유하시겠습니까?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <!--  HabitFormationCompleteActivity에서 사용할 텍스트  -->
    <string name="habit_formation_complete1">습관 형성이</string>
    <string name="habit_formation_complete2">완료되었습니다</string>
    <string name="check">확인</string>
    <!--  item_habit에서 사용할 텍스트  -->
    <string name="habit_title">책 30장 읽기</string>
    <string name="habit_period">목표: 주 3회 달성</string>
    <string name="certification">인증하기</string>
    <string name="percent">%</string>
    <string name="achievement_rate">달성률</string>
    <string name="combo">combo</string>
    <string name="combo_text">콤보</string>
    <string name="number_of_achievements">0/3</string>
    <string name="number_of_achievements_text">달성 횟수</string>
    <!--  CertificationActivity에서 사용할 텍스트  -->
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="my_goal">&lt;나의 목표&gt;</string>
    <string name="upload_image">사진 올리기</string>
    <string name="plan_arrangement">계획 회고 및 정리하기</string>
    <string name="difficulty">난이도</string>
    <string name="complete_certification">인증 완료하기</string>
    <!--  HabitCertificationCompleteActivity에서 사용할 텍스트  -->
    <string name="habit_certification_complete">습관 인증이</string>
    <!--  HabitModifyFragment에서 사용할 텍스트  -->
    <string name="modify">수정</string>
    <string name="delete">삭제</string>
    <string name="stop">그만두기</string>
    <!--  ProfileFragment에서 사용할 텍스트  -->
    <string name="default_num">0</string>
    <string name="achieving">달성중</string>
    <string name="achievement_rate2">달성률</string>
    <string name="followers">팔로워</string>
    <string name="edit_habit">작심삼일 습관을\n조정해주세요</string>
    <string name="edit_habit_text_suggestion">지난 기간 동안 습관을 이행하기 괜찮았나요?\n내가 체감한 난이도에 따라 습관의 수치를 조정해봐요!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>