<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/sub_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/round_frame_top_light_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/habit_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="@id/sub_frame"
        app:layout_constraintBottom_toTopOf="@id/btn_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="70dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_modify"
            android:layout_width="79dp"
            android:layout_height="33dp"
            android:background="@drawable/btn_yellow_background"
            android:text="@string/modify"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="79dp"
            android:layout_height="33dp"
            android:background="@drawable/btn_yellow_background"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_stop"
            android:layout_width="79dp"
            android:layout_height="33dp"
            android:background="@drawable/btn_yellow_background"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:textSize="18sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>