<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_src"
    tools:context=".HabitFormationCompleteActivity">

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:background="@android:color/transparent"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_icon"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/partying_face"
        android:layout_width="159dp"
        android:layout_height="159dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/partying_face"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_layout"/>

    <LinearLayout
        android:id="@+id/habit_formation_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/partying_face">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_formation_complete1"
            android:textSize="30sp"
            android:fontFamily="@font/pretendard_bold"
            android:textColor="@color/black"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_formation_complete2"
            android:textSize="30sp"
            android:fontFamily="@font/pretendard_bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_complete"
        android:layout_width="264dp"
        android:layout_height="59sp"
        android:layout_marginTop="80dp"
        android:text="@string/check"
        android:textColor="@color/white"
        android:fontFamily="@font/pretendard_semi_bold"
        android:textSize="25sp"
        android:background="@drawable/btn_green_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/habit_formation_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>