<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_src"
    tools:context=".AddHabitSecondActivity">

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_left"
            android:background="@android:color/transparent"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close_icon"
            android:background="@android:color/transparent"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/first_step_graph"
        android:layout_width="300dp"
        android:layout_height="23.15dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/second_step_graph"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_layout"/>

    <LinearLayout
        android:id="@+id/set_habit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_step_graph">

        <TextView
            android:id="@+id/set_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_habit"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="23sp"/>

        <TextView
            android:id="@+id/set_habit_text_suggestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/set_habit_text_suggestion"
            android:textColor="@color/black"/>
        
        <LinearLayout
            android:id="@+id/set_habit_edittext_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:orientation="horizontal">
            
            <EditText
                android:id="@+id/set_habit_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="1"
                android:hint="8am 이전 기상"
                android:gravity="center"
                android:background="@drawable/round_frame_white"/>

            <TextView
                android:id="@+id/set_habit_sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="5dp"
                android:text="@string/set_habit_sub_text"
                android:textSize="20sp"
                android:textColor="@color/black"/>
            
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:src="@drawable/arrow_right"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>